<resources>
    <string name="app_name">Localito</string>
    <string name="search">Buscar</string>
    <string name="more_dashed">Mas...</string>
    <string name="search_hint">Buscar...</string>
    <string name="home">Inicio</string>
    <string name="categories">Categorias</string>
    <string name="user">Usuario</string>
    <string name="order">Ordenes</string>
    <string name="stands">Puestos</string>
    <string name="more">Mas</string>
    <string name="product_image">Product Image</string>
    <string name="create_stand">Crear stand</string>
    <string name="terms_and_conditions">Terminos y condiciones</string>
    <string name="privacy">Privacidad</string>
    <string name="logout">Cerrar session</string>
    <string name="stand_title">Ropa americana</string>
    <string name="stand_description">Venedemos de todo lo que necesite en su dia a dia ropa moderna..</string>
    <string name="product_image_title">Texto secundario</string>
    <string name="product_title">Pantalones de mezclilla</string>
    <string name="product_description">Pantalones americanos de la mejor calidad</string>
    <string name="product_price">$ 250</string>
    <string name="product_button_order">Ordenar</string>
    <string name="product_button_available">Disponible</string>

    <string name="terms_text">He leído y acepto los</string>
    <string name="policy_text">He leído y acepto la</string>
    <string name="terms_title">Términos y Condiciones</string>
    <string name="policy_title">Política de Privacidad</string>
</resources>
