<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@id/stands"
    >
    <fragment
        android:id="@+id/stands"
        android:name="mx.pi5.localito.fragment.Stands"
        android:label="@string/stands"
        tools:layout="@layout/fragment_stands"
        app:route="stands"

        />
    <fragment
        android:id="@+id/categories"
        android:name="mx.pi5.localito.fragment.Categories"
        android:label="@string/categories"
        app:route="categories"
        tools:layout="@layout/fragment_categories"
        />
    <fragment
        android:id="@+id/more"
        android:name="mx.pi5.localito.fragment.More"
        android:label="@string/more"
        app:route="more"
        tools:layout="@layout/fragment_more"
        />
</navigation>
