<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.More"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:gravity="center_horizontal"
        android:orientation="vertical">

        <Button
            android:id="@+id/logout"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:layout_marginTop="30dp"
            android:text="@string/logout"
            app:icon="@drawable/baseline_logout_24" />

        <Button
            android:id="@+id/privacy"
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:layout_width="350dp"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/policy_title"
            app:icon="@drawable/baseline_privacy_tip_24" />

        <Button
            android:id="@+id/terms"
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:layout_width="350dp"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/terms_title"
            app:icon="@drawable/baseline_balance_24" />

    </LinearLayout>
</FrameLayout>
