<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/cardview_light_background"
        app:cardCornerRadius="8dp"
        app:strokeWidth="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Media -->
            <ImageView
                android:id="@+id/product_image"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:contentDescription="@string/product_image_title"
                android:scaleType="centerCrop"
                android:src="@drawable/baseline_card_giftcard_24"
                android:layout_marginEnd="8dp"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <!-- Title -->
                <TextView
                    android:id="@+id/product_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/product_title"
                    android:textAppearance="?attr/textAppearanceTitleMedium"
                    android:layout_marginTop="8dp"/>

                <!-- Description -->
                <TextView
                    android:id="@+id/product_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/product_description"
                    android:layout_marginTop="4dp"/>

                <!-- Price -->
                <TextView
                    android:id="@+id/product_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/product_price"
                    android:layout_marginTop="4dp"/>
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:dividerInsetStart="16dp"
        android:layout_marginTop="10dp"
        app:dividerInsetEnd="16dp"/>
</LinearLayout>

